--- a/styles.css
+++ b/styles.css
@@ -490,4 +490,228 @@ nav ul li.dropdown:hover .dropdown-menu {
     font-weight: 300;
   }
   
- 
+
+  /* EXPLORE */
+
+  .searchWrapper {
+    width: 95%;
+    margin: 0 auto;
+    padding-top: 5em;
+  }
+
+  .searchContainer {
+    margin: 1em 0;
+  }
+
+  .searchContainer input{
+    background-color:  transparent;
+    width: 30%;
+    border-bottom: 2px solid #000000;
+    border-radius: 5em;
+    padding: 1em 0.3em;
+  }
+
+  .searchContainer input:focus{
+    border-bottom-color: rgb(243, 4, 4) ;
+  }
+
+  .searchContainer button {
+    padding: 1em 2em;
+    margin-left: 1em;
+    background-color: #68c081;
+    color: #fff;
+    border-radius: 5em;
+    margin-top: 0.5em;
+    cursor: pointer;
+  }
+
+  .buttonValue {
+    background-color: #68c081;
+    border: 2px solid #0d7485;
+    padding: 1em 2.2em;
+    border-radius: 3em;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .active {
+    background-color: aqua;
+    color: #6a6d78;
+  }
+
+  .hide {
+    display: none;
+  }
+
+  #gamesContainer{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 1.5em;
+    padding: 2em 0;
+    justify-content: center; /* Centers columns horizontally */
+    align-items: center;     /* Centers items vertically */
+    width: 100%;
+  }
+
+  .card {
+    background-color: transparent;
+    max-width: 18em;
+    margin-top: 1em;
+    padding: 1em;
+    border-radius: 5px;
+  }
+
+  .imageContainer{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .imageContainer img{
+    width: 100%;
+    object-fit: cover;
+    height: 15em;
+  }
+
+  .nameContainer {
+    padding-top: 0.5em;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nameContainer h5{
+    font-weight: 500;
+    font-size: large;
+    padding-bottom: 0.5em;
+  }
+
+  .addBtn {
+    cursor: pointer;
+  }
+
+/* FIN EXPLORE */
+
+/* MY LIST */
+
+#myListContainer{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 1.5em;
+    padding: 2em 0;
+    justify-content: center; /* Centers columns horizontally */
+    align-items: center;     /* Centers items vertically */
+    width: 100%;
+  }
+
+  /* SIGN UP */
+
+  .formContainer{
+    display: flex;
+    padding-top: 8em;
+  }
+
+  .signUpWrapper{
+    max-width: 430px;
+    width: 100%;
+    background: #fff;
+    padding: 34px;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    place-self: center;
+    margin: auto;
+  }
+  .signUpWrapper h2{
+    position: relative;
+    font-size: 22px;
+    font-weight: 600;
+    color: #333;
+  }
+  .signUpWrapper h2::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 28px;
+    border-radius: 12px;
+    background: #4070f4;
+  }
+  .signUpWrapper form{
+    margin-top: 30px;
+  }
+  .signUpWrapper form .input-box{
+    height: 52px;
+    margin: 18px 0;
+  }
+
+  form .input-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-weight: 400;
+    color: #333;
+    border: 1.5px solid #C7BEBE;
+    border-bottom-width: 2.5px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
+  }
+
+  .input-box input:focus,
+  .input-box input:valid{
+    border-color: #4070f4;
+  }
+
+  form .input-box textarea{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    padding: 3px 15px;
+    font-size: 17px;
+    font-weight: 400;
+    color: #333;
+    border: 1.5px solid #C7BEBE;
+    border-bottom-width: 2.5px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
+  }
+
+  .input-box textarea:focus{
+    border-color: #4070f4;
+  }
+
+  form .policy{
+    display: flex;
+    align-items: center;
+  }
+  form h3{
+    color: #707070;
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 10px;
+  }
+  .input-box.button input{
+    color: #fff;
+    letter-spacing: 1px;
+    border: none;
+    background: #4070f4;
+    cursor: pointer;
+  }
+  .input-box.button input:hover{
+    background: #0e4bf1;
+  }
+  form .text h3{
+   color: #333;
+   width: 100%;
+   text-align: center;
+  }
+  form .text h3 a{
+    color: #4070f4;
+    text-decoration: none;
+  }
+  form .text h3 a:hover{
+    text-decoration: underline;
+  }
+  
