--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,32 @@ nav ul li.dropdown:hover .dropdown-menu {
     color: rgb(223, 230, 224);
 }
 
+.toTop {
+  background: #fff;
+  position: fixed;
+  bottom: 16px;
+  right: 32px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  color:#68c081;
+  opacity: 0;
+  pointer-events: none;
+  transition: all .4s;
+}
+
+.toTop.active{
+  bottom:32px;
+  pointer-events: auto;
+  opacity: 1;
+  color:#68c081;
+}
+
+
 /* FIN DE HEADER */
 
 /* SLIDER */
